# paidf-auto-labeling

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-3rd-party.txt  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  sonar-project.properties
configs/: pipeline_example.yaml
cookbooks/person_attributes/: README.md  question_bank.json
cookbooks/person_attributes/configs/: mcq_generation.yaml
cookbooks/robotics/: README.md  question_bank.json
cookbooks/shared/: README.md
cookbooks/traffic/: README.md  question_bank.json
cookbooks/warehouse/: README.md  question_bank.json
docker/: .dockerignore  Dockerfile  deploy.sh  docker-compose.yml  entrypoint.sh
docs/: config-reference.md  e2e-testing.md  getting-started.md  mcq-modes.md  remote-io.md
modules/: __init__.py  cli.py  nvcf_msc_utils.py  pipeline.py
modules/al_utils/: ckpts.py  common.py  endpoint_resolver.py  io.py  media_decode.py  media_paths.py  path_sanitize.py  prefetch_models.py  text.py
modules/config/: loader.py  normalize.py  schema.py  validate.py
modules/daft_export/: __init__.py  common.py  contextual.py  id_translator.py  paths.py  task.py  timecodes.py  tracking.py
modules/detection_and_tracking/: README.md  base.py  factory.py  rfdetr_tracking.py  run_accidents_tracking.sh
modules/mcq_generation/: README.md  __init__.py  base.py  factory.py  metadata_llm.py  question_driven_vlm_llm.py  window_direct_vlm.py  window_vlm_llm.py
modules/sr_runner/: __init__.py  base.py  factory.py  inference_seedvr2_window.py  seedvr2.py
modules/vlm_json/: base.py  factory.py  vlm_json_generator.py
skills/auto-labeling/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
tests/: conftest.py  test_cli.py  test_factory_init_once.py  test_mcq_factory.py  test_pipeline.py  test_sr_runner.py  test_timecodes.py
tests/daft_export/: test_common.py  test_contextual.py  test_id_translator.py  test_paths.py  test_task.py  test_tracking.py  test_validate_scene.py
tests/detection-and-tracking/: test_reid_weights_optional.py  test_rfdetr_tracking.py
tests/mcq-generation/: test_captions_cleanup.py  test_entrypoints_smoke.py  test_generator_wrappers.py  test_image_inputs.py  test_mcq_generation_utils.py  test_metadata_llm_windowing.py  test_openai_utils.py  test_question_bank_options.py  test_question_driven_pre_step.py  test_runner_overrides.py  test_structured_parsing.py  test_validate_edge_cases.py  test_window_metadata_extraction.py
tests/pipeline/: test_config_e2e.py  test_config_validation_rules.py  test_field_forwarding_regressions.py  test_loader_multi_sample.py  test_pipeline_fallbacks.py  test_pipeline_gpu_detection.py  test_pipeline_helpers.py  test_pipeline_remote.py  test_pipeline_run_logic.py  test_required_sentinel.py
tests/super_resolution/: test_seedvr2_window_video_writer.py  test_sr_disabled_routing.py  test_sr_multigpu_e2e.py
tests/utils/: test_api_key_resolution.py  test_docker_permissions_wiring.py  test_docker_smoke.py  test_frame_sampling_fast_fail.py  test_media_format_support.py  test_msc_sync_integration.py  test_nvcf_msc_utils.py  test_nvcf_msc_utils_remote.py  test_path_sanitize.py  test_resolve_gpu_list.py  test_retry_backoff.py  test_stage_log_file.py  test_vlm_frame_extraction.py
tests/vlm_json/: test_image_runner.py  test_video_runner_fallback.py
third_party_licenses/: MIT-BoostTrack.txt  MIT-CLIP-ReID.txt  MIT-DeepOCSort.txt  python-deps-licenses.md
(+62 files in other folders)
